# wordfeud

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
docs/: Difficulty implementation.mcdx
docs/images/: interface.xcf
releases/: make_release.bat
resources/: letter-background.xcf  resources.qrc  tile-background.xcf
resources/boards/: Scrabble.json  Wordfeud.json
resources/dictionaries/Danish/: Danish-letters.csv
resources/dictionaries/Finnish/: Finnish-letters.csv  Finnish-words.txt
resources/dictionaries/French/: French-letters.csv  French-words.txt
resources/dictionaries/German/: German-letters.csv
resources/dictionaries/Spanish/: Spanish-letters.csv
resources/dictionaries/Swedish/: Swedish-letters.csv
resources/dictionaries/Zoomer English/: Zoomer English-biased-words.txt  Zoomer English-letters.csv  Zoomer English-words.txt
resources/dictionaries/danish/: danish-letters.csv
resources/dictionaries/internal/German/: German-letters.csv
resources/icon/: icon.xcf
resources/letter-sets/: danish.csv  english.csv
resources/letters/: english.csv
resources/names/: American_presidents.txt  Danish_politics.txt  business.txt  content_creation.txt  esports.txt  gaming.txt  history.txt  media.txt  modern_politics.txt  music.txt  painting.txt  science.txt  software.txt  sport.txt  writing.txt
src/: AboutDialog.cpp  AboutDialog.hpp  AbstractEditor.cpp  AbstractEditor.hpp  AbstractEditorLauncher.cpp  AbstractEditorLauncher.hpp  Board.cpp  Board.hpp  BoardEditor.cpp  BoardEditor.hpp  BoardEditorLauncher.cpp  BoardEditorLauncher.hpp  BoardType.hpp  ButtonPanel.cpp  ButtonPanel.hpp  CMakeLists.txt  DictionaryEditor.cpp  DictionaryEditor.hpp  DictionaryEditorLauncher.cpp  DictionaryEditorLauncher.hpp  DictionaryEditorMode.hpp  DictionaryLookupDialog.cpp  DictionaryLookupDialog.hpp  Direction.hpp  EditorMode.hpp  ForwardDeclarations.hpp  Game.cpp  Game.hpp  GameState.hpp  Hand.hpp  Header.cpp  Header.hpp  Language.cpp  Language.hpp  LanguageName.hpp  Letter.cpp  Letter.hpp  LetterEditorWidget.cpp  LetterEditorWidget.hpp  LetterPool.cpp  (+68 more)
